@@ -4,7 +4,6 @@ After=network.target remote-fs.target nss-lookup.target
 
 [Service]
 Type=forking
-PIDFile=/run/httpd/httpd.pid
 ExecStart=/usr/sbin/apachectl start
 ExecStop=/usr/sbin/apachectl graceful-stop
 ExecReload=/usr/sbin/apachectl graceful
